# equihash_gpu

./: .gitignore  CMakeLists.txt  LICENSE
include/equihash_gpu/blake2b/: blake2b.cl
include/equihash_gpu/blake2b/gpu/: blake2b.cl
include/equihash_gpu/equihash/: equihash_solver.h  proof.h
include/equihash_gpu/equihash/gpu/: equihash.cl  equihash_gpu_config.h  equihash_gpu_solver.h  equihash_gpu_util.h
include/equihash_gpu/util/: Timer.h
src/: main.cpp
src/equihash/: proof.cpp
src/equihash/gpu/: equihash_gpu_config.cpp  equihash_gpu_solver.cpp  equihash_gpu_util.cpp
test/: CMakeLists.txt  blake2b_gpu_bench.cpp
